<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailInfoFragment"
    android:background="@color/Bg">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/repository_name"
        android:layout_marginBottom="48dp"
        style="@style/Widget.App.Toolbar"
        app:menu="@menu/toolbar_menu"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="32dp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_repo_link"
                android:layout_marginHorizontal="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawablePadding="8dp"
                android:textSize="16sp"
                android:textColor="@color/Secondary"
                android:gravity="center_vertical"
                app:drawableStartCompat="@drawable/ic_href"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:autoLink="web"
                android:singleLine="true"
                android:ellipsize="end"
                tools:text="@string/link" />

            <TextView
                android:id="@+id/tv_license"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:text="@string/license"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_license"
                app:layout_constraintStart_toStartOf="@id/tv_repo_link"
                app:layout_constraintTop_toBottomOf="@id/tv_repo_link" />


            <TextView
                android:id="@+id/tv_license_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/tv_repo_link"
                app:layout_constraintTop_toTopOf="@id/tv_license"
                app:layout_constraintBottom_toBottomOf="@id/tv_license"
                tools:text="@string/license_name" />

            <TextView
                android:id="@+id/tv_stars"
                style="@style/StatTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/stars_color"
                app:drawableStartCompat="@drawable/ic_star"
                tools:text="@string/stars_count"
                app:layout_constraintTop_toBottomOf="@id/tv_license_value"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                />

            <TextView
                android:id="@+id/tv_forks"
                style="@style/StatTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/forks_color"
                app:drawableStartCompat="@drawable/ic_forks"
                app:layout_constraintEnd_toStartOf="@+id/tv_watchers"
                app:layout_constraintStart_toEndOf="@+id/tv_stars"
                app:layout_constraintTop_toBottomOf="@id/tv_license_value"
                tools:text="@string/forks_count" />

            <TextView
                android:id="@+id/tv_watchers"
                style="@style/StatTextView"
                android:layout_marginEnd="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/watchers_color"
                app:drawableStartCompat="@drawable/ic_watchers_count"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_license_value"
                tools:text="@string/watchers_count" />


            <FrameLayout
                android:id="@+id/flReadMe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_forks"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" >

                <ProgressBar
                    android:id="@+id/pbReadMe"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/tvReadmeContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.2"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    tools:text="@string/readme_text" />
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/pbRepo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar" />

    <include
        layout="@layout/layout_info_state"
        android:id="@+id/inDetail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/materialToolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>